# langchain-academy

./: README.md  pyproject.toml  requirements.txt
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  deployment.ipynb  router.ipynb  simple-graph.ipynb
module-1/studio/: requirements.txt
module-2/: chatbot-external-memory.ipynb  chatbot-summarization.ipynb  multiple-schemas.ipynb  state-reducers.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
module-3/: breakpoints.ipynb  dynamic-breakpoints.ipynb  edit-state-human-feedback.ipynb  streaming-interruption.ipynb  time-travel.ipynb
module-3/studio/: requirements.txt
module-4/: map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb  sub-graph.ipynb
module-4/studio/: requirements.txt
module-5/: memory_agent.ipynb  memory_store.ipynb  memoryschema_collection.ipynb  memoryschema_profile.ipynb
module-5/studio/: requirements.txt
module-6/: assistant.ipynb  connecting.ipynb  creating.ipynb  double-texting.ipynb
