[project]
name = "langchain-academy"
version = "0.1.0"
description = "langchain academy with revisions specified"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langgraph==0.6.1",
    "langgraph-prebuilt==0.6.1",
    "langgraph-sdk==0.2.0",
    "langgraph-checkpoint-sqlite==2.0.11",
    "langsmith==0.4.8",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-openai==0.3.28",
    "notebook==7.4.4",
    "tavily-python==0.7.10",
    "wikipedia==1.4.0",
    "trustcall==0.0.39",
    "langgraph-cli[inmem]==0.3.6",
    "langchain-tavily==0.2.11",
]

[project.optional-dependencies]
dev = [
    "langchain==0.3.27",
    "openai==1.97.1",
    "toml>=0.10.2",
    "nbdime",
]
